--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -34,16 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/2_ecdc/country_response_measures.csv\")"
+    "response_df = pd.read_csv(\"data/2_ecdc/country_response_measures.csv\")\n",
+    "testing_df = pd.read_csv(\"data/2_ecdc/testing.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -60,11 +61,31 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Country</th>\n      <th>Response_measure</th>\n      <th>date_start</th>\n      <th>date_end</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Austria</td>\n      <td>AdaptationOfWorkplace</td>\n      <td>2020-03-10</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Austria</td>\n      <td>BanOnAllEvents</td>\n      <td>2020-11-03</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Austria</td>\n      <td>ClosDaycare</td>\n      <td>2020-03-16</td>\n      <td>2020-05-04</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Austria</td>\n      <td>ClosDaycarePartial</td>\n      <td>2020-11-17</td>\n      <td>2020-12-07</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Austria</td>\n      <td>ClosHigh</td>\n      <td>2020-03-16</td>\n      <td>2020-09-30</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 38
     }
    ],
    "source": [
-    "df.head()"
+    "response_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "65.82355527000979"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 48
+    }
+   ],
+   "source": [
+    "testing_df[\"positivity_rate\"].max()"
    ]
   },
   {
